task due date on mobile update and small css fix

--- a/pocs-capstone/frontend/src/components/PageDisplay/TaskMobile/TaskPageMobile.css
+++ b/pocs-capstone/frontend/src/components/PageDisplay/TaskMobile/TaskPageMobile.css
@@ -201,6 +201,8 @@
 .dropdown-tags-mobile {
     max-height: 20vh;
     overflow: scroll;
+    border-radius: .375rem;
+    border: 1px solid #ced4da;
 }
 
 
